# crypto_automation_system

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
crypto_bot/: app.py  requirements.txt
crypto_bot/.chalice/: config.json  policy-prod.json
crypto_bot/chalicelib/: strategy_config.json  trade_execution.py  trade_processing.py  utils.py
crypto_bot/chalicelib/exchanges/: gemini.py
crypto_bot/tests/test_chalicelib/: test_trade_execution.py  test_trade_processing.py  test_utils.py
crypto_bot/tests/test_chalicelib/test_exchanges/: test_gemini.py
trading_automation_system/: app.py  requirements.txt
trading_automation_system/.chalice/: config.json
trading_automation_system/chalicelib/: aws_clients.py  exceptions.py  strategy_config.json  trade_execution.py  trade_processing.py  utils.py
trading_automation_system/chalicelib/exchanges/: binance.py  bybit.py  gemini.py
trading_automation_system/tests/test_chalicelib/: test_trade_execution.py  test_trade_processing.py  test_utils.py
trading_automation_system/tests/test_chalicelib/test_exchanges/: test_gemini.py
